calls expected by the Asim classic controller

----------
mcadler     Date: Tue Nov 24 08:12:03 EST 2009  CSN: CSN-asimcore-313
                  Tue Nov 24 13:12:03 UTC 2009


Directory lib/libasim/include/asim
 mesg.h                    Locally Modified          312 

WARN wasn't defined when assertions are disabled.

----------
mcadler     Date: Tue Nov 24 23:27:33 EST 2009  CSN: CSN-asimcore-314
                  Wed Nov 25 04:27:33 UTC 2009


Directory lib/libasim/include/asim
 atomic.h                  Locally Modified          313 

Add Pause instruction.

----------
mcadler     Date: Wed Dec  2 12:14:36 EST 2009  CSN: CSN-asimcore-315
                  Wed Dec  2 17:14:36 UTC 2009


Directory lib/libasim/include/asim
 atomic.h                  Locally Modified          314 

Update atomic.h from our copy.  How come this wasn't updated from a
previous merge?

----------
spartha1    Date: Fri Feb 19 20:09:22 EST 2010  CSN: CSN-asimcore-316
                  Sat Feb 20 01:09:22 UTC 2010


Directory config/pm
 null_uncore_model.apm     Locally Modified          315 

Directory modules/controller/classic
 control.cpp               Locally Modified          315 

Directory feeders/inst/interface/null
 instfeedernull.h          Locally Modified          315 

Updating with simcore changes (rev. 2970 - Eric Borch)

- made null uncore a functioning model by adding required modules

- added debug statements in control.cpp

- the null feeder returns true on init() so it can be used in a model


Eric

----------
spartha1    Date: Fri Feb 19 20:20:19 EST 2010  CSN: CSN-asimcore-317
                  Sat Feb 20 01:20:19 UTC 2010


Directory modules/dral_api
 classic_dral_api_ptv_lite.awb Locally Added               0 

Updating with asim-simcore changes (rev. 2981 - Carl Beckmann)

- Added a DRAL API module that has no dependence on archlib or x86libs.
  To use it, you just need to build simcore with the following config switch:
    --enable-cohosupport-libs