@@ -6614,3 +6614,15 @@ Updating with asim-simcore changes (rev. 2981 - Carl Beckmann)
 - Added a DRAL API module that has no dependence on archlib or x86libs.
   To use it, you just need to build simcore with the following config switch:
     --enable-cohosupport-libs
+
+----------
+spartha1    Date: Fri Feb 19 20:27:32 EST 2010  CSN: CSN-asimcore-318
+                  Sat Feb 20 01:27:32 UTC 2010
+
+
+Directory lib/libasim/include/asim
+ clockserver.h             Locally Modified          317 
+
+Updating with simcore changes (rev. 3045 - Sailashri Parthasarathy)
+
+Adding an alternative method of computing the result when time stamp counters are used. Thanks to Krishna Rangan for the code snippet.
